add colab cells

--- a/mrnet_tutorial_solution.ipynb
+++ b/mrnet_tutorial_solution.ipynb
@@ -3,6 +3,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "be393db3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/gdrive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec839720",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install monai\n",
+    "!pip install visdom\n",
+    "!pip install nibabel\n",
+    "!pip install h5py\n",
+    "!pip install tensorboardX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "9ff51fa1",
    "metadata": {},
    "outputs": [],
