--- a/mrnet_tutorial_solution.ipynb
+++ b/mrnet_tutorial_solution.ipynb
@@ -114,7 +114,7 @@
     "######################\n",
     "#       Params       #\n",
     "######################\n",
-    "root = \"./data/\"\n",
+    "root = \"./gdrive/MyDrive/MRNet Report/MRNet-v1.0/\"\n",
     "task = \"acl\"\n",
     "plane = \"sagittal\"\n",
     "lr = 1e-5\n",
