add class weight

--- a/mrnet_tutorial_solution.ipynb
+++ b/mrnet_tutorial_solution.ipynb
@@ -133,6 +133,9 @@
     "######################\n",
     "#       Setup        #\n",
     "######################\n",
+    "device = get_best_device()\n",
+    "print(f\"\\n******* DEVICE - {device} *******\\n\")\n",
+    "\n",
     "train_transforms = Compose([\n",
     "    RandAffined(keys=\"image\", prob=1.0, rotate_range=(0, 0, np.pi/8), translate_range=(0.1, 0.1, 0.0)),\n",
     "    RandFlipd(keys=\"image\", spatial_axis=0, prob=0.5),\n",
@@ -144,8 +147,14 @@
     "])\n",
     "\n",
     "train_data = load_mrnet_data(root, task, plane, train=True)\n",
+    "labels = [int(x[\"label\"][0]) for x in train_data]\n",
+    "pos = sum(labels)\n",
+    "neg = len(labels) - pos\n",
+    "pos_weight = torch.tensor([neg / pos]).to(device) # Global calss weight.\n",
+    "\n",
     "if TRAIN_N is not None:\n",
     "    train_data = train_data[:TRAIN_N]\n",
+    "    \n",
     "val_data = load_mrnet_data(root, task, plane, train=False)\n",
     "\n",
     "def load_numpy(x):\n",
@@ -161,8 +170,6 @@
     "train_loader = DataLoader(train_ds, batch_size=batch_size, shuffle=True, num_workers=0)\n",
     "val_loader = DataLoader(val_ds, batch_size=batch_size, shuffle=False, num_workers=0)\n",
     "\n",
-    "device = get_best_device()\n",
-    "print(f\"\\n******* DEVICE - {device} *******\\n\")\n",
     "model = Net().to(device)\n",
     "optimizer = optim.Adam(model.parameters(), lr=lr, weight_decay=0.1)\n",
     "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, patience=4, factor=0.3, threshold=1e-4)"
@@ -193,7 +200,7 @@
     "        optimizer.zero_grad()\n",
     "        pred = model(x).squeeze(0)\n",
     "        y = y.view(-1)\n",
-    "        loss = F.binary_cross_entropy_with_logits(pred, y)\n",
+    "        loss = F.binary_cross_entropy_with_logits(pred, y, pos_weight=pos_weight)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
