remove the cached dataset

--- a/mrnet_tutorial_solution.ipynb
+++ b/mrnet_tutorial_solution.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9ff51fa1",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
     "from torch.utils.data import DataLoader\n",
     "from torchvision import models\n",
     "from monai.transforms import Compose, RandAffined, RandFlipd, ToTensord\n",
-    "from monai.data import Dataset, CacheDataset\n",
+    "from monai.data import Dataset\n",
     "from sklearn import metrics\n",
     "from tqdm import tqdm"
    ]
@@ -164,8 +164,8 @@
     "    x[\"image\"] = array\n",
     "    return x\n",
     "\n",
-    "train_ds = CacheDataset(data=train_data, transform=Compose([load_numpy, train_transforms]), cache_rate=1.0)\n",
-    "val_ds = CacheDataset(data=val_data, transform=Compose([load_numpy, val_transforms]), cache_rate=1.0)\n",
+    "train_ds = Dataset(data=train_data, transform=Compose([load_numpy, train_transforms]))\n",
+    "val_ds = Dataset(data=val_data, transform=Compose([load_numpy, val_transforms]))\n",
     "\n",
     "train_loader = DataLoader(train_ds, batch_size=batch_size, shuffle=True, num_workers=0)\n",
     "val_loader = DataLoader(val_ds, batch_size=batch_size, shuffle=False, num_workers=0)\n",
