make num_workers configurable

--- a/mrnet_tutorial_solution.ipynb
+++ b/mrnet_tutorial_solution.ipynb
@@ -120,6 +120,7 @@
     "lr = 1e-5\n",
     "epochs = 50\n",
     "batch_size = 1\n",
+    "num_workers = 2\n",
     "TRAIN_N = None  # dev subsample, set to None to use all"
    ]
   },
@@ -167,8 +168,8 @@
     "train_ds = Dataset(data=train_data, transform=Compose([load_numpy, train_transforms]))\n",
     "val_ds = Dataset(data=val_data, transform=Compose([load_numpy, val_transforms]))\n",
     "\n",
-    "train_loader = DataLoader(train_ds, batch_size=batch_size, shuffle=True, num_workers=0)\n",
-    "val_loader = DataLoader(val_ds, batch_size=batch_size, shuffle=False, num_workers=0)\n",
+    "train_loader = DataLoader(train_ds, batch_size=batch_size, shuffle=True, num_workers=num_workers)\n",
+    "val_loader = DataLoader(val_ds, batch_size=batch_size, shuffle=False, num_workers=num_workers)\n",
     "\n",
     "model = Net().to(device)\n",
     "optimizer = optim.Adam(model.parameters(), lr=lr, weight_decay=0.1)\n",
