--- a/mrnet_tutorial_solution.ipynb
+++ b/mrnet_tutorial_solution.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8039ba20",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9f7bb087",
    "metadata": {},
    "outputs": [],
@@ -115,8 +115,8 @@
     "#       Params       #\n",
     "######################\n",
     "root = \"./gdrive/MyDrive/MRNet Report/MRNet-v1.0/\"\n",
-    "task = \"acl\"\n",
-    "plane = \"sagittal\"\n",
+    "task = \"meniscus\"\n",
+    "plane = \"coronal\"\n",
     "lr = 1e-5\n",
     "epochs = 50\n",
     "batch_size = 1\n",
@@ -135,6 +135,9 @@
     "#       Setup        #\n",
     "######################\n",
     "device = get_best_device()\n",
+    "# GPU = 1\n",
+    "# torch.cuda.set_device(GPU)\n",
+    "# device = torch.device(f\"cuda:{GPU}\")\n",
     "print(f\"\\n******* DEVICE - {device} *******\\n\")\n",
     "\n",
     "train_transforms = Compose([\n",
