--- a/mrnet_tutorial_solution.ipynb
+++ b/mrnet_tutorial_solution.ipynb
@@ -233,7 +233,7 @@
     "    val_auc = metrics.roc_auc_score(y_trues, y_preds) if len(set(y_trues)) > 1 else 0.5\n",
     "    val_loss = np.mean(val_losses)\n",
     "\n",
-    "    print(f\"epoch: {epoch} | train loss: {np.mean(losses):.4f} | train auc: {train_auc:.4f} | val loss: {val_loss:.4f} | val auc: {val_auc:.4f}\")\n",
+    "    print(f\"{task}[{plane}] - epoch: {epoch} | train loss: {np.mean(losses):.4f} | train auc: {train_auc:.4f} | val loss: {val_loss:.4f} | val auc: {val_auc:.4f}\")\n",
     "    print(\"-\" * 30)\n",
     "\n",
     "    if val_auc > best_val_auc:\n",
