--- a/mrnet_tutorial_solution.ipynb
+++ b/mrnet_tutorial_solution.ipynb
@@ -41,7 +41,10 @@
     "import torch.nn.functional as F\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision import models\n",
-    "from monai.transforms import Compose, RandAffined, RandFlipd, ToTensord\n",
+    "from monai.transforms import (\n",
+    "    Compose, RandAffined, RandFlipd, ToTensord, RandGaussianNoised,\n",
+    "    RandScaleIntensityd, RandShiftIntensityd, RandZoomd\n",
+    ")\n",
     "from monai.data import Dataset\n",
     "from sklearn import metrics\n",
     "from tqdm import tqdm"
@@ -82,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9f7bb087",
    "metadata": {},
    "outputs": [],
@@ -94,14 +97,43 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.pretrained_model = models.resnet18(weights=models.ResNet18_Weights.DEFAULT)\n",
-    "        self.classifier = nn.Linear(1000, 1)\n",
+    "        self.conv = nn.Conv2d(in_channels=512, out_channels=512, kernel_size=1)\n",
+    "        self.soft = nn.Softmax(2)\n",
+    "        self.classifer = nn.Linear(1000, 1)\n",
+    "\n",
+    "    def tile(a, dim, n_tile):\n",
+    "        init_dim = a.size(dim)\n",
+    "        repeat_idx = [1] * a.dim()\n",
+    "        repeat_idx[dim] = n_tile\n",
+    "        a = a.repeat(*(repeat_idx))\n",
+    "        order_index = torch.LongTensor(np.concatenate([init_dim * np.arange(n_tile) + i for i in range(init_dim)]))\n",
+    "        if torch.cuda.is_available():\n",
+    "            a = a.cuda()\n",
+    "            order_index = order_index.cuda()\n",
+    "        return torch.index_select(a, dim, order_index)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = torch.squeeze(x, dim=0)  # (slices, 3, 256, 256)\n",
-    "        x = self.pretrained_model(x)\n",
-    "        x = torch.max(x, dim=0, keepdim=True)[0]  # (1, 1000)\n",
-    "        x = F.relu(x)\n",
-    "        return self.classifier(x)  # (1, 1)"
+    "        x = torch.squeeze(x, dim=0)\n",
+    "        x = self.pretrained_model.conv1(x)\n",
+    "        x = self.pretrained_model.bn1(x)\n",
+    "        x = self.pretrained_model.maxpool(x)\n",
+    "        x = self.pretrained_model.layer1(x)\n",
+    "        x = self.pretrained_model.layer2(x)\n",
+    "        x = self.pretrained_model.layer3(x)\n",
+    "        x = self.pretrained_model.layer4(x)\n",
+    "        attention = self.conv(x)\n",
+    "        attention =  self.soft(attention.view(*attention.size()[:2], -1)).view_as(attention)\n",
+    "        maximum = torch.max(attention.flatten(2), 2).values\n",
+    "        maximum = Net.tile(maximum, 1, attention.shape[2]*attention.shape[3])\n",
+    "        attention_norm = attention.flatten(2).flatten(1) / maximum\n",
+    "        attention_norm= torch.reshape(attention_norm, (attention.shape[0],attention.shape[1],attention.shape[2],attention.shape[3]))\n",
+    "        o = x*attention_norm\n",
+    "        out= self.pretrained_model.avgpool(o)\n",
+    "        out = self.pretrained_model.fc(out.squeeze())\n",
+    "        output = torch.max(out, 0, keepdim=True)[0]\n",
+    "        output = self.classifer(output)\n",
+    "\n",
+    "        return output"
    ]
   },
   {
@@ -141,8 +173,19 @@
     "print(f\"\\n******* DEVICE - {device} *******\\n\")\n",
     "\n",
     "train_transforms = Compose([\n",
-    "    RandAffined(keys=\"image\", prob=1.0, rotate_range=(0, 0, np.pi/8), translate_range=(0.1, 0.1, 0.0)),\n",
+    "    RandAffined(\n",
+    "        keys=\"image\",\n",
+    "        prob=1.0,\n",
+    "        rotate_range=(0, 0, np.pi / 8),\n",
+    "        translate_range=(0.1, 0.1, 0.0),\n",
+    "        scale_range=(0.1, 0.1, 0.0),\n",
+    "        padding_mode=\"border\"\n",
+    "    ),\n",
     "    RandFlipd(keys=\"image\", spatial_axis=0, prob=0.5),\n",
+    "    RandGaussianNoised(keys=\"image\", prob=0.3, mean=0.0, std=0.1),\n",
+    "    RandScaleIntensityd(keys=\"image\", prob=0.5, factors=0.2),\n",
+    "    RandShiftIntensityd(keys=\"image\", prob=0.5, offsets=0.1),\n",
+    "    RandZoomd(keys=\"image\", prob=0.3, min_zoom=0.9, max_zoom=1.1, mode=\"bilinear\", padding_mode=\"edge\", keep_size=True),\n",
     "    ToTensord(keys=[\"image\", \"label\"])\n",
     "])\n",
     "\n",
@@ -191,7 +234,7 @@
     "######################\n",
     "best_val_auc = 0\n",
     "early_stop = 0\n",
-    "trigger = 10\n",
+    "trigger = 5 # tightening this up to 5 cause we're seeing lots of overfitting.\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    model.train()\n",
