increase trigger to 10

--- a/mrnet_tutorial_solution.ipynb
+++ b/mrnet_tutorial_solution.ipynb
@@ -234,7 +234,7 @@
     "######################\n",
     "best_val_auc = 0\n",
     "early_stop = 0\n",
-    "trigger = 5 # tightening this up to 5 cause we're seeing lots of overfitting.\n",
+    "trigger = 10\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    model.train()\n",
