make the notebook deterministic too

--- a/mrnet_tutorial_solution.ipynb
+++ b/mrnet_tutorial_solution.ipynb
@@ -45,14 +45,16 @@
     "    Compose, RandAffined, RandFlipd, ToTensord, RandGaussianNoised,\n",
     "    RandScaleIntensityd, RandShiftIntensityd, RandZoomd\n",
     ")\n",
+    "from monai.utils import set_determinism\n",
     "from monai.data import Dataset\n",
     "from sklearn import metrics\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8039ba20",
    "metadata": {},
    "outputs": [],
@@ -60,6 +62,17 @@
     "######################\n",
     "#       Utils        #\n",
     "######################\n",
+    "def seed_all(seed=42):\n",
+    "    random.seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False\n",
+    "\n",
+    "seed_all(42)\n",
+    "set_determinism(seed=42)\n",
+    "\n",
     "def get_best_device():\n",
     "    if torch.cuda.is_available():\n",
     "        return torch.device(\"cuda\")\n",
@@ -214,8 +227,8 @@
     "train_ds = Dataset(data=train_data, transform=Compose([load_numpy, train_transforms]))\n",
     "val_ds = Dataset(data=val_data, transform=Compose([load_numpy, val_transforms]))\n",
     "\n",
-    "train_loader = DataLoader(train_ds, batch_size=batch_size, shuffle=True, num_workers=num_workers)\n",
-    "val_loader = DataLoader(val_ds, batch_size=batch_size, shuffle=False, num_workers=num_workers)\n",
+    "train_loader = DataLoader(train_ds, batch_size=batch_size, shuffle=True, num_workers=num_workers, generator=torch.Generator().manual_seed(42))\n",
+    "val_loader = DataLoader(val_ds, batch_size=batch_size, shuffle=False, num_workers=num_workers, generator=torch.Generator().manual_seed(42))\n",
     "\n",
     "model = Net().to(device)\n",
     "optimizer = optim.Adam(model.parameters(), lr=lr, weight_decay=0.1)\n",
