--- a/mrnet_tutorial_solution.ipynb
+++ b/mrnet_tutorial_solution.ipynb
@@ -113,6 +113,7 @@
     "        self.conv = nn.Conv2d(in_channels=512, out_channels=512, kernel_size=1)\n",
     "        self.soft = nn.Softmax(2)\n",
     "        self.classifer = nn.Linear(1000, 1)\n",
+    "        self.dropout = nn.Dropout(p=0.5)\n",
     "\n",
     "    def tile(a, dim, n_tile):\n",
     "        init_dim = a.size(dim)\n",
@@ -144,6 +145,7 @@
     "        out= self.pretrained_model.avgpool(o)\n",
     "        out = self.pretrained_model.fc(out.squeeze())\n",
     "        output = torch.max(out, 0, keepdim=True)[0]\n",
+    "        output = self.dropout(output)\n",
     "        output = self.classifer(output)\n",
     "\n",
     "        return output"
